# VibeClaude

./: .gitignore  README.md  main.py  pyproject.toml
test/: test_audio.py  test_notification.py
vibeclaude/: __init__.py  main.py
