[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeclaude"
version = "1.0.0"
description = "Claude-Code Stop hook with desktop notifications and audio feedback"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydub",
    "simpleaudio",
]

[project.urls]
Homepage = "https://github.com/dzianisv/VibeClaude"
Repository = "https://github.com/dzianisv/VibeClaude"
Issues = "https://github.com/dzianisv/VibeClaude/issues"

[project.scripts]
vibe-claude = "vibeclaude.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibeclaude*"]